# torvyn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
benches/: Cargo.toml  README.md
benches/benches/: copy_accounting.rs  latency.rs  memory.rs  throughput.rs
benches/comparison/: grpc_baseline.rs
benches/src/: lib.rs
crates/torvyn/: Cargo.toml  README.md
crates/torvyn-cli/: Cargo.toml  README.md
crates/torvyn-cli/src/: cli.rs  lib.rs  main.rs
crates/torvyn-cli/src/commands/: bench.rs  check.rs  doctor.rs  init.rs  inspect.rs  link.rs  mod.rs  pack.rs  publish.rs  run.rs  trace.rs
crates/torvyn-cli/src/errors/: diagnostic.rs  mod.rs
crates/torvyn-cli/src/output/: json.rs  mod.rs  table.rs  terminal.rs
crates/torvyn-cli/src/templates/: content.rs  mod.rs
crates/torvyn-cli/tests/: bench_command_tests.rs  check_command_tests.rs  cli_parsing_tests.rs  first_ten_minutes_tests.rs  init_command_tests.rs  json_output_tests.rs  pack_command_tests.rs  publish_command_tests.rs  run_command_tests.rs  trace_command_tests.rs
crates/torvyn-config/: Cargo.toml  README.md
crates/torvyn-config/src/: env.rs  error.rs  lib.rs  loader.rs  manifest.rs  merge.rs  pipeline.rs  runtime.rs  validate.rs
crates/torvyn-config/tests/: integration_test.rs
crates/torvyn-config/tests/fixtures/: full_manifest.toml  invalid_name.toml  invalid_syntax.toml  minimal.toml  missing_fields.toml  pipeline.toml
crates/torvyn-contracts/: Cargo.toml  README.md
crates/torvyn-contracts/src/: compatibility.rs  errors.rs  lib.rs  linker.rs  parser.rs  validator.rs
crates/torvyn-contracts/tests/: golden_pipeline.rs
crates/torvyn-contracts/wit-ext/torvyn-aggregation/: aggregator.wit  world.wit
crates/torvyn-contracts/wit-ext/torvyn-capabilities/: capabilities.wit
crates/torvyn-contracts/wit-ext/torvyn-filtering/: filter.wit  router.wit  world.wit
crates/torvyn-contracts/wit/torvyn-streaming/: buffer-allocator.wit  lifecycle.wit  processor.wit  sink.wit  source.wit  types.wit  world.wit
crates/torvyn-engine/: Cargo.toml  README.md
crates/torvyn-engine/src/: cache.rs  config.rs  error.rs  lib.rs  mock.rs  traits.rs  types.rs  wasmtime_engine.rs  wasmtime_invoker.rs
crates/torvyn-host/: Cargo.toml  README.md
crates/torvyn-host/src/: builder.rs  error.rs  host.rs  inspection.rs  lib.rs  shutdown.rs  signal.rs  startup.rs
crates/torvyn-host/tests/: builder_tests.rs  lifecycle_tests.rs  shutdown_tests.rs
crates/torvyn-linker/: Cargo.toml  README.md
crates/torvyn-linker/src/: error.rs  lib.rs  linked_pipeline.rs  linker.rs  resolver.rs  topology.rs
crates/torvyn-linker/tests/: integration_tests.rs
crates/torvyn-observability/: Cargo.toml  README.md
crates/torvyn-observability/src/: collector.rs  config.rs  lib.rs
crates/torvyn-observability/src/bench/: mod.rs  report.rs
crates/torvyn-observability/src/events/: mod.rs  recorder.rs  types.rs
crates/torvyn-observability/src/export/: channel.rs  json.rs  mod.rs  otlp.rs
crates/torvyn-observability/src/metrics/: counter.rs  flow_metrics.rs  gauge.rs  histogram.rs  mod.rs  pool_metrics.rs  registry.rs  snapshot.rs
crates/torvyn-observability/src/tracer/: context.rs  mod.rs  ring_buffer.rs  sampling.rs
crates/torvyn-observability/tests/: benchmark_report_tests.rs  event_sink_tests.rs  metrics_tests.rs  tracing_tests.rs
crates/torvyn-packaging/: Cargo.toml  README.md
crates/torvyn-packaging/src/: artifact.rs  cache.rs  digest.rs  error.rs  inspection.rs  lib.rs  manifest.rs  media_types.rs  oci.rs  provenance.rs  resolution.rs  signing.rs
crates/torvyn-packaging/tests/: assembly_tests.rs  inspection_tests.rs  integration_tests.rs
crates/torvyn-pipeline/: Cargo.toml  README.md
crates/torvyn-pipeline/src/: builder.rs  convert.rs  error.rs  handle.rs  instantiate.rs  lib.rs  shutdown.rs  topology.rs  validate.rs
crates/torvyn-pipeline/tests/: topology_tests.rs
crates/torvyn-reactor/: Cargo.toml  README.md
crates/torvyn-reactor/src/: backpressure.rs  cancellation.rs  config.rs  coordinator.rs  demand.rs  error.rs  events.rs  fairness.rs  flow_driver.rs  handle.rs  lib.rs  metrics.rs  queue.rs  scheduling.rs  stream.rs  topology.rs
crates/torvyn-reactor/tests/: integration_tests.rs
crates/torvyn-resources/: Cargo.toml  README.md
crates/torvyn-resources/src/: accounting.rs  budget.rs  buffer.rs  error.rs  handle.rs  lib.rs  manager.rs  ownership.rs  pool.rs  table.rs
crates/torvyn-resources/tests/: manager_lifecycle_tests.rs
crates/torvyn-security/: Cargo.toml  README.md
crates/torvyn-security/src/: audit.rs  capability.rs  error.rs  guard.rs  lib.rs  manifest.rs  resolver.rs  sandbox.rs  tenant.rs
crates/torvyn-security/tests/: integration_test.rs
crates/torvyn-types/: Cargo.toml  README.md
crates/torvyn-types/src/: constants.rs  enums.rs  error.rs  identity.rs  lib.rs  records.rs  state.rs  timestamp.rs  traits.rs
crates/torvyn-types/tests/: integration_test.rs
crates/torvyn/src/: lib.rs  main.rs
examples/token-streaming/components/content-filter/: Cargo.toml
examples/token-streaming/components/sentence-aggregator/: Cargo.toml
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: test_backpressure.rs  test_cancellation.rs  test_capability_denial.rs  test_component_crash.rs  test_copy_accounting.rs  test_multiple_flows.rs  test_resource_leaks.rs  test_source_processor_sink.rs  test_source_to_sink.rs
tests/test-components/doubling-processor/: Cargo.toml
tests/test-components/doubling-processor/src/: lib.rs
tests/test-components/echo-sink/: Cargo.toml
tests/test-components/echo-sink/src/: lib.rs
tests/test-components/echo-source/: Cargo.toml
tests/test-components/echo-source/src/: lib.rs
tests/test-components/failing-processor/: Cargo.toml
tests/test-components/failing-processor/src/: lib.rs
tests/test-components/identity-processor/: Cargo.toml
tests/test-components/identity-processor/src/: lib.rs
tests/test-components/slow-processor/: Cargo.toml
(+119 files in other folders)
