[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# External
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
thiserror = "2.0.6"
tracing = "0.1.40"

# Internal crates
torvyn-types = { path = "crates/torvyn-types" }
torvyn-contracts = { path = "crates/torvyn-contracts" }
torvyn-config = { path = "crates/torvyn-config" }
torvyn-engine = { path = "crates/torvyn-engine" }
torvyn-observability = { path = "crates/torvyn-observability" }
torvyn-resources = { path = "crates/torvyn-resources" }
torvyn-security = { path = "crates/torvyn-security" }
torvyn-reactor = { path = "crates/torvyn-reactor" }
torvyn-linker = { path = "crates/torvyn-linker" }
torvyn-pipeline = { path = "crates/torvyn-pipeline" }
torvyn-packaging = { path = "crates/torvyn-packaging" }
torvyn-host = { path = "crates/torvyn-host" }

[workspace.lints.clippy]
all = "deny"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
