[package]
name = "torvyn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Developer CLI for the Torvyn streaming runtime"
readme = "README.md"

[[bin]]
name = "torvyn"
path = "src/main.rs"

[dependencies]
# Argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Terminal output
console = "0.15"
indicatif = "0.17"

# Table output
tabled = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = "0.4"

# Async runtime
tokio.workspace = true

# Internal crates
torvyn-types.workspace = true
torvyn-config.workspace = true
torvyn-contracts.workspace = true
torvyn-engine.workspace = true
torvyn-host.workspace = true
torvyn-packaging.workspace = true
torvyn-linker.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Lib target so integration tests can import types
[lib]
name = "torvyn_cli"
path = "src/lib.rs"

[lints]
workspace = true
