[package]
name = "torvyn-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime orchestration shell for Torvyn"

[features]
default = ["signal"]
signal = []

[dependencies]
torvyn-types.workspace = true
torvyn-config.workspace = true
torvyn-engine.workspace = true
torvyn-resources.workspace = true
torvyn-reactor.workspace = true
torvyn-observability.workspace = true
torvyn-security.workspace = true
torvyn-linker.workspace = true
torvyn-pipeline.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[lints]
workspace = true
