[package]
name = "torvyn-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tracing, metrics, and observability for Torvyn"
readme = "README.md"

[dependencies]
torvyn-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true
