[package]
name = "torvyn-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pipeline topology construction, validation, and instantiation for Torvyn"
readme = "README.md"

[dependencies]
torvyn-types.workspace = true
torvyn-linker.workspace = true
torvyn-reactor.workspace = true
torvyn-engine.workspace = true
torvyn-resources.workspace = true
torvyn-config.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[features]
default = []
mock = []

[lints]
workspace = true
