[package]
name = "torvyn-reactor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stream scheduling, backpressure, and flow lifecycle for Torvyn"
readme = "README.md"

[dependencies]
torvyn-types.workspace = true
torvyn-engine.workspace = true
torvyn-resources.workspace = true
torvyn-observability.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
torvyn-engine = { workspace = true, features = ["mock"] }
async-trait = "0.1"

[lints]
workspace = true
