[package]
name = "torvyn-resources"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Buffer pools, ownership tracking, and copy accounting for Torvyn"
readme = "README.md"

[dependencies]
torvyn-types.workspace = true
parking_lot = "0.12"

[lints]
workspace = true
