[package]
name = "torvyn-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Shared foundation types for the Torvyn reactive streaming runtime"
license = "Apache-2.0"
repository = "https://github.com/torvyn/torvyn"
keywords = ["wasm", "streaming", "reactive", "types"]
categories = ["wasm", "data-structures"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
