[package]
name = "torvyn-types"
version = "0.1.1"
edition = "2021"
rust-version = "1.91"
description = "Shared foundation types for the Torvyn reactive streaming runtime"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/torvyn/torvyn"
keywords = ["wasm", "streaming", "reactive", "types"]
categories = ["wasm", "data-structures"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true
