[package]
name = "test-doubling-processor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test processor component: doubles each byte in the payload"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"

[package.metadata.component]
package = "torvyn:streaming"
world = "transform"
