[package]
name = "test-echo-sink"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test sink component: collects elements and verifies ordering"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"

[package.metadata.component]
package = "torvyn:streaming"
world = "data-sink"
