[package]
name = "test-identity-processor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test processor component: passes elements through unchanged"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"

[package.metadata.component]
package = "torvyn:streaming"
world = "transform"
