[package]
name = "test-slow-processor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test processor component: adds configurable delay via spin loop"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"

[package.metadata.component]
package = "torvyn:streaming"
world = "managed-transform"
