[package]
name = "content-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[package.metadata.component]
package = "torvyn:filtering"

[package.metadata.component.target]
world = "content-filter"
path = "../../wit/torvyn-filtering"

[package.metadata.component.target.dependencies]
"torvyn:streaming" = { path = "../../wit/torvyn-filtering/deps/torvyn-streaming" }
